fix: breadcrumb extra space

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@ html,
 body,
 :root {
   height: 100%;
-  padding-top: 40px;
+  padding-top: 37px;
   background-color: #F8FAFC;
 }
 
